@@ -43,6 +43,7 @@ gerb_stats_t *
 gerb_stats_new(void) {
 
     gerb_stats_t *stats;
+    error_list_t *error_list;
 
     /* Malloc space for new stats struct.  Return NULL if error. */
     if ((stats = (gerb_stats_t *)malloc(sizeof(gerb_stats_t))) == NULL) {
@@ -52,6 +53,12 @@ gerb_stats_new(void) {
     /* Set new stats struct to zero */
     memset((void *)stats, 0, sizeof(gerb_stats_t));
 
+    /* Initialize error list */
+    error_list = gerb_stats_new_error_list();
+    if (error_list == NULL)
+        GERB_FATAL_ERROR("malloc error_list failed\n");
+    stats->error_list = (error_list_t *) error_list;
+
     return stats;
 }
 
@@ -59,7 +66,10 @@ gerb_stats_new(void) {
 /* ------------------------------------------------------- */
 void
 gerb_stats_add_layer(gerb_stats_t *accum_stats, 
-		     gerb_stats_t *input_stats) {
+		     gerb_stats_t *input_stats,
+		     int this_layer) {
+
+    error_list_t *error;
 
     accum_stats->layer_count++;
     accum_stats->G0 += input_stats->G0;
@@ -102,7 +112,96 @@ gerb_stats_add_layer(gerb_stats_t *accum_stats,
     accum_stats->star += input_stats->star;
     accum_stats->unknown += input_stats->unknown;
 
+    /* ==== Now deal with the error list ==== */
+    for (error = input_stats->error_list;
+         error != NULL;
+         error = error->next) {
+        if (error->error_text != NULL) {
+            gerb_stats_add_error(accum_stats->error_list,
+                                  this_layer,
+                                  error->error_text,
+                                  error->type);
+        }
+    }
+
+
     return;
 }
 
+/* ------------------------------------------------------- */
+error_list_t *
+gerb_stats_new_error_list() {
+    error_list_t *error_list;
+
+    /* Malloc space for new error_list struct.  Return NULL if error. */
+    if ((error_list = (error_list_t *)malloc(sizeof(error_list_t))) == NULL) {
+        return NULL;
+    }
+
+    error_list->layer = -1;
+    error_list->error_text = NULL;
+    error_list->next = NULL;
+    return error_list;
+}
+
+
+/* ------------------------------------------------------- */
+void
+gerb_stats_add_error(error_list_t *error_list_in,
+                      int layer, const char *error_text,
+                      enum error_type_t type) {
+
+    error_list_t *error_list_new;
+    error_list_t *error_last = NULL;
+    error_list_t *error;
+
+    /* Replace embedded error messages */
+    switch (type) {
+        case FATAL:
+            GERB_FATAL_ERROR(error_text);
+            break;
+        case ERROR:
+            GERB_COMPILE_ERROR(error_text);
+            break;
+        case WARNING:
+            GERB_COMPILE_WARNING(error_text);
+            break;
+        case NOTE:
+            break;
+    }
+
+    /* First handle case where this is the first list element */
+    if (error_list_in->error_text == NULL) {
+        error_list_in->layer = layer;
+        error_list_in->error_text = g_strdup_printf("%s", error_text);
+        error_list_in->type = type;
+        error_list_in->next = NULL;
+        return;
+    }
+
+    /* Next check to see if this error is already in the list */
+    for(error = error_list_in; error != NULL; error = error->next) {
+        if ((strcmp(error->error_text, error_text) == 0) &&
+            (error->layer == layer) ) {
+            return;  /* This error text is already in the error list */
+        }
+        error_last = error;  /* point to last element in error list */
+    }
+    /* This error text is unique.  Therefore, add it to the list */
+
+    /* Now malloc space for new error list element */
+    error_list_new = (error_list_t *) malloc(sizeof(error_list_t));
+    if (error_list_new == NULL) {
+        GERB_FATAL_ERROR("malloc error_list failed\n");
+    }
+
+    /* Set member elements */
+    error_list_new->layer = layer;
+    error_list_new->error_text = g_strdup_printf("%s", error_text);
+    error_list_new->type = type;
+    error_list_new->next = NULL;
+    error_last->next = error_list_new;
+
+    return;
+}
 
