@@ -25,8 +25,12 @@
 #define GERB_STATS_H
 
 #include <gdk/gdk.h>  /* This imports gboolean type */
+#include "gerb_error.h"
 
 typedef struct {
+
+    error_list_t *error_list;
+
     int layer_count;
     int G0;
     int G1;
@@ -74,6 +78,12 @@ typedef struct {
 /* ===================  Prototypes ================ */
 gerb_stats_t * gerb_stats_new(void);
 void gerb_stats_add_layer(gerb_stats_t *accum_stats, 
-			  gerb_stats_t *input_stats);
+			  gerb_stats_t *input_stats,
+			  int this_layer);
+
+error_list_t *gerb_stats_new_error_list(void);
+void gerb_stats_add_error(error_list_t *error_list_in,
+                           int layer, const char *error_text,
+                           enum error_type_t type);
 
 #endif /* GERB_STATS_H */
